# heygpt

./: .gitignore  Cargo.toml  README-zh.md  README.md  setup.sh
.github/workflows/: auto-release.yml  build-x86_64.yml  macos.yml  self-host.yml  ubuntu.yml
src/: main.rs
